# maxmind-c-lib-practice

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  constants.h  geo_ip_loader.cc  geo_ip_loader.h  main.cc  main_test.cc  maxmind_db_reader.cc  maxmind_db_reader.h  maxmind_error_category.cc  maxmind_error_category.h
.github/workflows/: CI.yaml
